--- a/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -5,11 +5,18 @@
 }
 
 <h2>Index</h2>
+@*gabriel@OdeToCode.com@(Model.Count())*@
+@*@@OdeToCode*@
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+
+@foreach(var item in Model)
+{
+    @Html.Partial("_RestaurantSummary", item)
+}
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -30,4 +37,8 @@
     </tr>
 }
 
-</table>
+</table>*@
+
+@*@section footer {
+    <div>Index Footer</div>
+}*@
